# alfred-help-workflow

./: .gitignore  .travis.yml  README.md  install-requirements.sh  install.py  pyproject.toml  requirements.txt
src/: alfredhelp.py  info.plist
src/alfred-2/: info.plist
src/main/: alfredhelp.py
