[tool.poetry]
name = "alfred-help-workflow"
version = "1.6.0-alpha.0"
description = ""
authors = ["Alexander Kramarev <pochemuto@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
Alfred-Workflow = "^1.37.2"

[tool.poetry.dev-dependencies]
toml = "^0.10.0"
pytest = "4.6"
rope = "^0.14.0"
autopep8 = "^1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
